# APLabs

./: Laba17(C++) SFML(02.05).rar  Laba17(C++) SFML.rar  README.md
Coursework/: main.cpp  shunting_yard.h
Laba1/: CMakeLists.txt  main.c
Laba10/: CMakeLists.txt  main.c  task.txt
Laba11/: CMakeLists.txt  main.c
Laba12(C++)/: CMakeLists.txt  main.cpp
Laba13/: CMakeLists.txt  main.c
Laba14/: CMakeLists.txt  main.c  utility.h
Laba15(C++)/: CMakeLists.txt  F.txt  G.txt  H.txt  main.cpp
Laba16(C++)/: CMakeLists.txt  main.cpp
Laba17(C++) SFML/: CMakeLists.txt  main.cpp
Laba2/: CMakeLists.txt  main.c
Laba3/: CMakeLists.txt  main.c
Laba4/: CMakeLists.txt  main.c
Laba5/: main.c
Laba6/: CMakeLists.txt  main.c
Laba7/: CMakeLists.txt  main.c
Laba8/: CMakeLists.txt  main.c
Laba9/: CMakeLists.txt  main.c  task.txt
MKR/: CMakeLists.txt  var9_3.cpp
MKR/Laba17(C++) Windows.h/: main.cpp
MKR2/: CMakeLists.txt  main.cpp  var9_1.cpp  var9_2.cpp
Shunting-Yard algorithm/: CMakeLists.txt  main.cpp  queue.h  stack.h
Протоколи/: Звіт АП №1.docx  Звіт АП №10.docx  Звіт АП №11.docx  Звіт АП №12.docx  Звіт АП №13.docx  Звіт АП №14.docx  Звіт АП №15.docx  Звіт АП №16.docx  Звіт АП №2.docx  Звіт АП №3.docx  Звіт АП №4.docx  Звіт АП №5.docx  Звіт АП №6.docx  Звіт АП №7.docx  Звіт АП №8.docx  Звіт АП №9.docx
Протоколи/Сoursework/: CMakeLists.txt  main.cpp  shunting_yard.h
